<resources>
    <string name="app_name">Verbosity</string>
    <string name="play">Play</string>
    <string name="settings">Settings</string>
    <string name="stickers">Stickers</string>
    <string name="category_name">Category Name</string>
    <string name="word1">Word 1</string>
    <string name="picture1">Picture 1</string>
    <string name="word2">Word 2</string>
    <string name="picture2">Picture 2</string>
    <string name="word3">Word 3</string>
    <string name="picture3">Picture 3</string>
    <string name="word4">Word 4</string>
    <string name="picture4">Picture 4</string>
    <string name="create_game">Create Game</string>
    <string name="button_add_image_word1">Add Picture for Word 1</string>
    <string name="button_add_image_word2">Add Picture for Word 2</string>
    <string name="button_add_image_word3">Add Picture for Word 3</string>
    <string name="button_add_image_word4">Add Picture for Word 4</string>
    <string name="perfect">Perfect!</string>
    <string name="great_job">Great job!</string>
    <string name="keep_trying">Keep trying!</string>
    <string name="quit_game">Quit game</string>
    <string name="play_again">Play again</string>
    <string name="another_game">Choose another category</string>
</resources>
