<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="candacelizelle.finalproject_candacejlizelles.Home">

    <Button
        android:id="@+id/sticker_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:onClick="showStickers"
        android:padding="20dp"
        android:text="@string/stickers"
        android:textSize="36sp" />

    <Button
        android:id="@+id/play_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/sticker_button"
        android:layout_centerHorizontal="true"
        android:onClick="playGame"
        android:padding="20dp"
        android:text="@string/play"
        android:textSize="36sp" />

    <Button
        android:id="@+id/settings_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/sticker_button"
        android:layout_centerHorizontal="true"
        android:onClick="changeSettings"
        android:padding="20dp"
        android:text="@string/settings"
        android:textSize="36sp" />

    <Button
        android:id="@+id/create_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/settings_button"
        android:layout_centerHorizontal="true"
        android:onClick="createGame"
        android:padding="20dp"
        android:text="@string/create_game"
        android:textSize="36sp" />

</RelativeLayout>
